# mcp-paper

./: .gitignore  ENHANCED_SYSTEM_SUMMARY.md  JOLUX_CAPABILITY_VERIFICATION_REPORT.md  JOLUX_ENDPOINT_CAPABILITIES.md  JOLUX_SPARQL_USAGE_GUIDE.md  LAWYER_WORKFLOW_METHODOLOGY.md  MCP_COMPLIANCE_VERIFICATION.md  README.md  ROADMAP.md  SYSTEM_STATUS.md  all_foundation_query_results.json  debug_query.txt  detailed_findings.py  filter_experiment_results.json  install.sh  jolux_capability_tester.py  logs.sh  restart.sh  sparql_query_test_results.json  start.sh  stop.sh  test_context_limits.py  test_fixed_sparql_queries.py  test_smart_search.py  test_sparql_capabilities.py
aws_lambda_deployment/: CLIENT_USAGE.md  README.md  README_2_FUNCTION_ARCHITECTURE.md  api_cli_client.py  ask_question.sh  create_request_tracking_table.py  current_env.json  demo.sh  deploy_2_functions.sh  deployment_info.json  interactive_client.py  tool_cli_client.py
aws_lambda_deployment/api_function/: lambda_function.py  requirements.txt
aws_lambda_deployment/processor_function/: Dockerfile  lambda_function.py  requirements.txt
client/: LLAMA_IMPROVEMENTS.md  README.md  __init__.py  claude_client.py  cli_client.py  enhanced_client.py  foundation_openai_client.py  foundation_requirements.txt  haiku_client.py  llama_client.py  openai_client.py  openai_client_tool_by_tool.py  requirements.txt  simple_client.py  test_haiku.py  test_mcp_tools.py
client/aws_lambda_deployment/: Dockerfile  README.md  README_2_FUNCTION_ARCHITECTURE.md  analytics_queries.py  deploy.sh  deploy_2_functions.sh  deployment_info.json  lambda_function.py  requirements.txt  terraform.tfvars
client/aws_lambda_deployment/api_function/: Dockerfile  lambda_function.py
client/aws_lambda_deployment/processor_function/: lambda_function.py
client/aws_lambda_deployment/shared/: dynamodb_manager.py
jolux_ontology/jolux-ontology-owl/: catalog-v001.xml  eli-v1.1.owl  event.owl  prov.ttl  skos-xl.ttl
research/: PAPER_STRUCTURE.md  RESEARCH_PLAN.md
server/: pyproject.toml  requirements.txt  server.py  test_search.py  test_tools.py
server/luxembourg_legal/: __init__.py  config.py  content_processor.py  extractors.py  metadata_utils.py  tools.py
server/luxembourg_legal/models/: __init__.py  base.py  tool_models.py
server/luxembourg_legal_server/: __init__.py  amendment_analysis.py  citation_analysis.py  consolidation_analysis.py  content.py  repeal_analysis.py  search.py
server/luxembourg_legal_server/cache/: __init__.py  fifo_cache.py  lfu_cache.py  lru_cache.py  query_cache.py
server/luxembourg_legal_server/core/: __init__.py  chat_client.py  config.py  server.py
server/luxembourg_legal_server/extractors/: __init__.py  content_processor.py  html_extractor.py  pdf_extractor.py
server/luxembourg_legal_server/formatters/: __init__.py  formatter.py  json_formatter.py  simplified_formatter.py  tabular_formatter.py
sparql/ontology/: jolux.ttl
sparql/working_queries/: foundation_discovery_queries.sql  keyword_analysis_queries.sql
